objects/echosign_dev1__Form_Field_Child_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Child_Relationship_Name__c</fullName>
        <label>Child Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>Form Field Child Mappings</relationshipLabel>
        <relationshipName>Form_Field_Child_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Object_Reference_Path__c</fullName>
        <label>Object Reference Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Query_Filter__c</fullName>
        <label>Query Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sort_Field__c</fullName>
        <label>Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form Field Child Mapping</label>
    <nameField>
        <displayFormat>FFCM-{00000000}</displayFormat>
        <label>Form Field Child Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Field Child Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>